--- a/apps/host/src/app/app.component.html
+++ b/apps/host/src/app/app.component.html
@@ -1,5 +1,12 @@
-<ul class="remote-menu">
-  <li><a routerLink="/">Home</a></li>
-  <li><a routerLink="table">Table</a></li>
-</ul>
-<router-outlet></router-outlet>
+<mat-drawer-container>
+  <mat-drawer mode="side" opened>
+    <h2>Navegación</h2>
+    <ul class="remote-menu">
+      <li><a routerLink="/">Home</a></li>
+      <li><a routerLink="table">Table</a></li>
+    </ul>
+  </mat-drawer>
+  <mat-drawer-content>
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+</mat-drawer-container>
