--- a/apps/table/src/app/remote-entry/components/table/table.component.html
+++ b/apps/table/src/app/remote-entry/components/table/table.component.html
@@ -26,22 +26,17 @@
         </ng-container>
 
         <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
         </ng-container>
 
         <!-- Manufacture Column -->
-        <ng-container matColumnDef="manufacturer">
-            <th mat-header-cell *matHeaderCellDef> Manufacturer </th>
-            <td mat-cell *matCellDef="let element"> {{element.manufacturer}} </td>
+        <ng-container matColumnDef="descripcion">
+            <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+            <td mat-cell *matCellDef="let element"> {{element.descripcion}} </td>
         </ng-container>
 
-        <!-- Technology Column -->
-        <ng-container matColumnDef="technology">
-            <th mat-header-cell *matHeaderCellDef> Technology </th>
-            <td mat-cell *matCellDef="let element"> {{element.technology}} </td>
-        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
