Update package.json and HTML templates - add modal to the table microfront

--- a/apps/table/src/app/remote-entry/components/table/modal-add/modal-add.component.html
+++ b/apps/table/src/app/remote-entry/components/table/modal-add/modal-add.component.html
@@ -1,6 +1,6 @@
-<mat-dialog-content >
+<!-- <mat-dialog-content>
     <h1 mat-dialog-title>Añadir Maquina</h1>
-    <form [formGroup]="form" (ngSubmit)="addHeroe($event)">
+    <form [formGroup]="form" (ngSubmit)=" save()">
         <mat-form-field>
             <mat-label>Nombre</mat-label>
             <input matInput formControlName="nombre">
@@ -10,5 +10,20 @@
             <input matInput formControlName="descripcion">
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit">Añadir</button>
+    </form>
+</mat-dialog-content> -->
+<mat-dialog-content>
+    <h1 mat-dialog-title>Agregar Héroe</h1>
+    <form [formGroup]="form" (ngSubmit)="save()">
+        <mat-form-field>
+            <input matInput placeholder="Nombre" formControlName="nombre">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Descripción" formControlName="descripcion">
+        </mat-form-field>
+        <div class="button-container">
+            <!-- <button mat-button (click)="cancel()">Cancelar</button> -->
+            <button mat-button color="primary" type="submit">Guardar</button>
+        </div>
     </form>
 </mat-dialog-content>
