--- a/apps/table/src/app/remote-entry/components/table/table.component.scss
+++ b/apps/table/src/app/remote-entry/components/table/table.component.scss
@@ -7,3 +7,12 @@
     margin-right: 1rem;
 
 }
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
